syntax = "proto3";

package tkd.typeserver.v1;

message ResolveRequest {
    oneof kind {
        // Searches for the file descriptor proto by file name.
        // For example:
        //  - tkd/typeserver/v1/typeserver.proto
        //  - buf/validate/validate.proto
        string file_by_filename = 1;

        // Searches for the file descriptor that contains the specified
        // symbol.
        // This field should be a fully-qualified symbol name
        // (e.g. <package>.<service>[.<method>] or <package>.<type>).
        //
        // For example:
        //  - tkd.typeserver.v1.TypeResolverService
        //  - tkd.idm.v1.Profile
        string file_containing_symbol = 2;

        // Similar file_containing_symbol but searches the type_url for a message.
        // See documentation for google.protobuf.Any for more information.
        string file_containing_url = 3;
    }
}

message ResolveResponse {
    ResolveRequest original_request = 1;

    oneof message_response {
        FileDescriptorResponse file_descriptor = 2;
    }
}

message FileDescriptorResponse {
    bytes file_descriptor_proto = 3;
}

service TypeResolverService {
    rpc ResolveType(ResolveRequest) returns (ResolveResponse);
}
